# haskell-format

./: .gitignore  .stylish-haskell.yaml  .travis.yml  README.md  haskell-format.cabal  package.yaml  stack.yaml
app/: Main.hs
src/Language/Haskell/: Format.hs
test/: Spec.hs
test/specs/app-multiline/: output.hs
test/specs/case-of/: output.hs
test/specs/case-of-multiline-pattern/: input.hs  output.hs
test/specs/case-of-multiline-target/: input.hs  output.hs
test/specs/comments/: input.hs  output.hs
test/specs/do/: input.hs  output.hs
test/specs/do-multiline-generator/: input.hs  output.hs
test/specs/exporting-module/: input.hs  output.hs
test/specs/expression-case-of/: input.hs
test/specs/expression-if/: input.hs
test/specs/expression-if-multiline/: input.hs  output.hs
test/specs/expression-if-oneline/: output.hs
test/specs/expression-infix-operator/: input.hs  output.hs
test/specs/expression-infix-operator-multiline/: input.hs  output.hs
test/specs/expression-list-multiline/: output.hs
test/specs/function-signature-multiline/: input.hs  output.hs
test/specs/function-simple/: input.hs  output.hs
test/specs/hello-world/: output.hs
test/specs/if/: output.hs
test/specs/if-multiline/: output.hs
test/specs/import-multiline/: input.hs  output.hs
test/specs/import-multiple/: input.hs  output.hs
test/specs/infix-operator/: input.hs  output.hs
test/specs/infix-operator-multiline/: output.hs
test/specs/lambda/: input.hs  output.hs
test/specs/let/: input.hs  output.hs
test/specs/list-empty/: input.hs  output.hs
test/specs/list-multiline/: input.hs  output.hs
test/specs/list-oneline/: output.hs
test/specs/module-export/: input.hs  output.hs
test/specs/multiline-import/: output.hs
(+34 files in other folders)
